<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:padding="5dp"
    android:background="@android:color/darker_gray">

    <!-- Operand 1 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operand_1"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etOperandOne"
        android:text="@string/zero"
        android:inputType="numberDecimal"/>

    <!-- Operand 2 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operand_2"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etOperandTwo"
        android:text="@string/zero"
        android:inputType="numberDecimal"/>

    <!-- Buttons for Various Operators -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bOperatorPlus"
            android:layout_weight="1"
            android:text="@string/plus"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bOperatorMinus"
            android:layout_weight="1"
            android:text="@string/minus"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bOperatorMultiply"
            android:layout_weight="1"
            android:text="@string/multiply"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bOperatorDivide"
            android:layout_weight="1"
            android:text="@string/divide"/>

    </LinearLayout>

</LinearLayout>